--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     margin: auto;
     width: 90%;
     max-width: 100ch;
@@ -50,6 +51,9 @@ input, textarea {
     border: 1px solid steelblue;
     padding: 4px;
     margin: 0;
+    position: absolute;
+    z-index: 10;
+    background: #fff;
 }
 
 .results > .result {
