Add distillbert based qa. model optimized using onnx

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,7 +75,8 @@ input, textarea {
     color: var(--text-color);
 }
 
-.results > .result:hover {
+.results > .result:hover,
+.results > .result.active {
     background-color: var(--text-color);
     color: var(--background-color);
     cursor: pointer;
