--- a/templates/index.html
+++ b/templates/index.html
@@ -20,51 +20,46 @@
         <main id="app">
 
             <div class="row search-form">
-                <input type="search" id="search" placeholder="Ask a question"
-                    autocomplete=off
-                    v-model="query"
-                    @keyup.enter="chooseItem"
-                    @keyup.down="moveDown"
-                    @keyup.up="moveUp"
-                    @focusout="focusout"
-                />
+                <input type="search" id="search" placeholder="Ask a question" v-model="query" @keyup.enter="chooseItem"
+                    @keyup.down="moveDown" @keyup.up="moveUp" @focusout="focusout" />
                 <button @click="chooseItem">❓</button>
             </div>
 
             <div class="row source-form"> Filter by:
-                <input id="language" type="text" placeholder="Language" v-model="language"/>
-                <input id="title" type="text" placeholder="Article title"  v-model="title"/>
+                <input id="language" type="text" placeholder="Language" v-model="language" />
+                <input id="title" type="text" placeholder="Article title" v-model="title" />
             </div>
             <ul class="row results" v-if="searchResults.length && query && query !== selectedQuestion ">
-                <li
-                  class="result"
-                  v-for="(qa, index) in searchResults"
-                  :key="qa.id"
-                  @click="selectQuestion(qa)"
-                  :class="{active: selectedIndex === index}"
-                  v-text="qa.question"
-                >
+                <li class="result" v-for="(qa, index) in searchResults" :key="qa.id" @click="selectQuestion(qa)"
+                    :class="{active: selectedIndex === index}" v-text="qa.question">
                 </li>
-              </ul>
-              <p class="selectedq" v-text="selectedQuestion"></p>
-              <p class="answer" :title="answer.score" v-text="answer.answer"></p>
-              <div class="context" >
+            </ul>
+            <p class="selectedq" v-text="selectedQuestion"></p>
+            <p class="answer" :title="answer.score" v-text="answer.answer"></p>
+            <div class="context">
                 <h2><a :href="answer.source" v-text="answer.source"></a></h2>
                 <p v-html="answer.context"></p>
-              </div>
-              <h2 v-if="answer.answer">Explore</h2>
-              <ul class="row sources" v-if="answer.answer">
-                <li
-                  class="result"
-                  v-for="(title, index) in answer.searched_in"
-                  :key="title"
-                >
-                    <a :href="title" v-text="title"></a>
+            </div>
+            <h2 v-if="answer.answer">Explore</h2>
+            <ul class="row sources" v-if="answer.answer">
+                <li class="result" v-for="pageinfo in pageInfos" :key="pageinfo.title">
+                    <section class="article-card">
+                        <img :src="pageinfo.image" />
+                        <div>
+                            <h2><a :href="pageinfo.url" v-text="pageinfo.title"></a></h2>
+                            <p v-text="pageinfo.summary"></p>
+                        </div>
+                    </section>
                 </li>
-              </ul>
+            </ul>
         </main>
         <footer>
-            <p>An experimental natural language based querying system for Wikipedia. Questions are generated using gpt-3.5-turbo model by OpenAI. Answering questions is based on  distilbert-base-cased-distilled-squad model optimized using ONNX. The answering context is provided using a hybrid strategy of named entity recognition on query and titles extracted from Wikipedia native search results for the query.</p>
+            <p>An experimental natural language based querying system for Wikipedia. Questions are generated using
+                <code>gpt-3.5-turbo</code> model by OpenAI. Answering questions is based on <a
+                    href="https://huggingface.co/distilbert-base-cased-distilled-squad">distilbert-base-cased-distilled-squad</a>
+                model optimized using <a href="https://onnxruntime.ai">ONNX</a>. The answering context is provided using
+                a hybrid strategy of named entity recognition on query and titles extracted from Wikipedia native search
+                results for the query.</p>
         </footer>
     </body>
 
