--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,13 @@
 :root {
-    --background-color: rgb(46, 52, 64);
-    --text-color: #eee;
-    --border-color: steelblue;
+    --background-color: #424242;
+    --text-color: #FAFAFA;
+    --border-color: #BDBDBD;
+    --header-background-color: #212121;
 }
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     margin: auto;
-    width: 90%;
-    max-width: 100ch;
     height: 100vh;
     background-color: var(--background-color);
     color: var(--text-color);
@@ -28,29 +27,62 @@ body.wait {
 
 main {
     grid-area: main;
+    display: grid;
+    grid-gap: 2em;
+    grid-template-columns: 1fr;
+    align-content: start;
+    margin: 0;
+    padding: 0 5%;
 }
 
 header {
     grid-area: header;
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: repeat(12, 1fr);
+    min-height: 10vh;
+    min-height: 10vh;
+    margin: 0;
+    align-items: center;
+    padding: 0 5%;
+    background-color: var(--header-background-color);
+    border-bottom: 1px solid var(--border-color);
 }
+
 
 h3 {
     font-weight: 400;
 }
 
-.row {
+.logo {
+    font-size: 2em;
+    grid-column: span 2;
+    justify-self: center;
+}
+
+.search-form {
+    grid-column: span 8;
     display: grid;
-    margin-top: 1em;
-}
 
-.row.source-form {
-    grid-template-columns: 3fr 2fr 7fr;
-}
-
-.row.search-form {
     grid-template-columns: 11fr 1fr;
     border: 1px solid var(--border-color);
-    padding: 1em
+    border-radius: 20px;
+    margin: 1em 0;
+    padding: 2px 14px;
+    background-color: var(--background-color);
+}
+
+.query-input {
+    padding: 8px;
+}
+
+.query-submit {
+    color: white;
+}
+
+.result {
+    grid-column: span 8;
+
 }
 
 button {
@@ -67,48 +99,63 @@ input, textarea, button {
     font-family: sans-serif;
 }
 
-.results {
-    grid-template-columns: 1fr;
-    list-style: none;
-    border: 1px solid steelblue;
-    padding: 4px;
+.answer-container {
+    grid-column: span 1;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: start;
+}
+
+.results-container {
+    grid-column: span 1;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: start;
+}
+
+.result {
+    display: grid;
+    grid-template-columns: 2fr 4fr;
+    padding: 0;
+    grid-column: span 1;
+}
+
+.result > img {
+    grid-column: span 1;
+    object-fit: cover;
+    height: 120px;
+    width: 120px;
+    justify-self: self-end;
+    padding: 0 8px;
+
+}
+
+.result > .pageinfo {
+    grid-column: span 1;
+}
+
+.pageinfo h2 {
     margin: 0;
-    position: absolute;
-    z-index: 10;
-    background: var(--background-color);
+    font-size: 1.2em;
+}
+.results-container h2 {
+    grid-column: span 12;
 }
 
-.results > .result {
-    line-height: 2em;
-    padding: 8px;
-    background-color: var(--background-color);
-    color: var(--text-color);
-}
-
-.results > .result:hover,
-.results > .result.active {
-    background-color: var(--text-color);
-    color: var(--background-color);
-    cursor: pointer;
-    transition: 0.1s;
-}
-
-.selectedq, .answer {
-    font-size: 1.25em;
-}
-
-.selectedq {
-    font-weight: bold;
-}
 
 .answer {
-    padding-left: 2em;
+    font-size: 1.25em;
+    grid-column: span 12;
 }
 
 footer {
     grid-area: footer;
-    border-top: 1px solid steelblue;
+    border-top: 1px solid var(--border-color);;
     margin-top: 4em;
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 0 5%;
+    background-color: var(--header-background-color);
 }
 
 a {
@@ -125,6 +172,7 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0;
+    grid-column: span 12;
 }
 
 .sources li{
@@ -139,22 +187,20 @@ a {
     padding: 1em;
 }
 
-.article-card img{
-    object-fit: cover;
-    width: 100%;
-    height: 20vh;
-}
-
-.article-card p{
-    max-height: 4em;
-    overflow: clip;
-}
-
 @keyframes rotation {
     from {
       transform: rotate(0deg);
     }
     to {
       transform: rotate(359deg);
+    }
+}
+
+@media screen and (prefers-color-scheme: light) {
+    :root {
+        --background-color: #FAFAFA;
+        --text-color: #424242;;
+        --border-color: #E0E0E0;
+        --header-background-color: #EEEEEE;
     }
 }
