Integrate vector store

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -16,7 +16,7 @@
 
     <body id="chatapp">
         <header>
-            <span class="logo"> W? </span>
+            <img class="logo mw-logo-icon" src="https://en.wikipedia.org/static/images/icons/wikipedia.png" alt="" aria-hidden="true" width="50" height="50">
             <h1>Chat</h1>
         </header>
 
