--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,6 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     margin: auto;
-    height: 100vh;
     background-color: var(--background-color);
     color: var(--text-color);
     /* grid container settings */
@@ -33,6 +32,7 @@ main {
     align-content: start;
     margin: 0;
     padding: 0 5%;
+    min-height: 60vh;
 }
 
 header {
@@ -78,12 +78,10 @@ h3 {
 
 .query-submit {
     color: white;
+    font-size: 24px;
+    font-weight: 700;
 }
 
-.result {
-    grid-column: span 8;
-
-}
 
 button {
     cursor: pointer;
@@ -115,9 +113,10 @@ input, textarea, button {
 
 .result {
     display: grid;
-    grid-template-columns: 2fr 4fr;
+    grid-template-columns: 1fr 11fr;
     padding: 0;
     grid-column: span 1;
+    margin-bottom: 1em;
 }
 
 .result > img {
@@ -170,7 +169,7 @@ a {
 
 .sources {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     padding: 0;
     grid-column: span 12;
 }
