--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,13 @@
 <footer>
-    <p>An experimental natural language based querying system for Wikipedia. First, Embedddings of Wikipedia articles are prepared and stored. Then, using the embedding for the given query relevant articles are found using FAISS. The narrowed down context is given to an LLM to answer the question.
+    <p>An experimental natural language based querying system for Wikipedia.
     </p>
+    <h2>How does it work?</h2>
+    <ul>
+        <li>Vector embedddings of sections of Wikipedia articles are prepared and stored</li>
+        <li>Calculate the vector embedding for the given query </li>
+        <li>Do a vector search in the vector store with Hierarchical Navigable Small World (HNSW) to find vectors that are similar</li>
+        <li>Retrieve the corresponding article and narrowed down section</li>
+        <li>Use the narrowed down context with an LLM to articulate the answer.</li>
+    </ul>
+    <p>Source code: <a href="https://github.com/santhoshtr/wq">github.com/santhoshtr/wq</a> </p>
 </footer>
