--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,205 +1,230 @@
 :root {
-    --background-color: #424242;
-    --text-color: #FAFAFA;
-    --border-color: #BDBDBD;
-    --header-background-color: #212121;
+  --background-color: #424242;
+  --text-color: #fafafa;
+  --border-color: #bdbdbd;
+  --header-background-color: #212121;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    margin: auto;
-    background-color: var(--background-color);
-    color: var(--text-color);
-    /* grid container settings */
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr auto;
-    grid-template-areas:
-      'header'
-      'main'
-      'footer';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  margin: auto;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  /* grid container settings */
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
 }
 
 body.wait {
-    cursor: wait;
+  cursor: wait;
 }
 
 main {
-    grid-area: main;
-    display: grid;
-    grid-gap: 2em;
-    grid-template-columns: 1fr;
-    align-content: start;
-    margin: 0;
-    padding: 0 5%;
-    min-height: 60vh;
+  grid-area: main;
+  display: grid;
+  grid-gap: 2em;
+  grid-template-columns: 1fr;
+  align-content: start;
+  margin: 0;
+  padding: 0 5%;
+  min-height: 60vh;
 }
 
 header {
-    grid-area: header;
-    display: grid;
-    grid-gap: 1em;
-    grid-template-columns: repeat(12, 1fr);
-    min-height: 10vh;
-    min-height: 10vh;
-    margin: 0;
-    align-items: center;
-    padding: 0 5%;
-    background-color: var(--header-background-color);
-    border-bottom: 1px solid var(--border-color);
+  grid-area: header;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: repeat(12, 1fr);
+  min-height: 10vh;
+  min-height: 10vh;
+  margin: 0;
+  align-items: center;
+  padding: 0 5%;
+  background-color: var(--header-background-color);
+  border-bottom: 1px solid var(--border-color);
 }
 
-
 h3 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .logo {
-    font-size: 2em;
-    grid-column: span 2;
-    justify-self: center;
+  font-size: 2em;
+  grid-column: span 2;
+  justify-self: center;
 }
 
 .search-form {
-    grid-column: span 8;
-    display: grid;
+  grid-column: span 8;
+  display: grid;
 
-    grid-template-columns: 11fr 1fr;
-    border: 1px solid var(--border-color);
-    border-radius: 20px;
-    margin: 1em 0;
-    padding: 2px 14px;
-    background-color: var(--background-color);
+  grid-template-columns: 11fr 1fr;
+  border: 1px solid var(--border-color);
+  border-radius: 20px;
+  margin: 1em 0;
+  padding: 2px 14px;
+  background-color: var(--background-color);
 }
 
 .query-input {
-    padding: 8px;
+  padding: 8px;
 }
 
 .query-submit {
-    color: white;
-    font-size: 24px;
-    font-weight: 700;
+  color: white;
+  font-size: 24px;
+  font-weight: 700;
 }
-
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-input, textarea, button {
-    font-size: 1.25em;
-    min-width: 0;
-    border: none;
-    outline: none;
-    background-color: var(--background-color);
-    color: var(--text-color);
-    font-family: sans-serif;
+input,
+textarea,
+button {
+  font-size: 1.25em;
+  min-width: 0;
+  border: none;
+  outline: none;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  font-family: sans-serif;
 }
 
 .answer-container {
-    grid-column: span 1;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    align-items: start;
+  grid-column: span 1;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  align-items: start;
 }
 
 .results-container {
-    grid-column: span 1;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    align-items: start;
+  grid-column: span 1;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  align-items: start;
 }
 
 .result {
-    display: grid;
-    grid-template-columns: 1fr 11fr;
-    padding: 0;
-    grid-column: span 1;
-    margin-bottom: 1em;
+  display: grid;
+  grid-template-columns: 1fr 11fr;
+  padding: 0;
+  grid-column: span 1;
+  margin-bottom: 1em;
 }
 
 .result > img {
-    grid-column: span 1;
-    object-fit: cover;
-    height: 120px;
-    width: 120px;
-    justify-self: self-end;
-    padding: 0 8px;
-
+  grid-column: span 1;
+  object-fit: cover;
+  height: 120px;
+  width: 120px;
+  justify-self: start;
 }
 
+
+.result  h2  {
+    margin: 0;
+}
+
+
+.result  h2 a {
+    border: none;
+}
+
+.result > .context {
+  font-size: 1.1em;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.result > .context > p {
+  margin: 0;
+  padding: 0 1em;
+}
 .result > .pageinfo {
-    grid-column: span 1;
+  grid-column: span 1;
 }
 
 .pageinfo h2 {
-    margin: 0;
-    font-size: 1.2em;
+  margin: 0;
+  font-size: 1.2em;
 }
 .results-container h2 {
-    grid-column: span 12;
+  grid-column: span 12;
 }
 
-
 .answer {
-    font-size: 1.25em;
-    grid-column: span 12;
+  font-size: 1.25em;
+  grid-column: span 12;
 }
 
 footer {
-    grid-area: footer;
-    border-top: 1px solid var(--border-color);;
-    margin-top: 4em;
-    display: grid;
-    grid-template-columns: 1fr;
-    padding: 0 5%;
-    background-color: var(--header-background-color);
+  grid-area: footer;
+  border-top: 1px solid var(--border-color);
+  margin-top: 4em;
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 0 5%;
+  background-color: var(--header-background-color);
 }
 
 a {
-    cursor: pointer;
-    color: var(--text-color);
+  cursor: pointer;
+  color: var(--text-color);
+  color: var(--text-color);
+  border-bottom: 1px solid var(--border-color);
+  text-decoration: none;
+}
+
+.context sup {
+  display: none;
 }
 
 .wait button {
-    animation: rotation 1s infinite alternate;
-    background: transparent;
+  animation: rotation 1s infinite alternate;
+  background: transparent;
 }
 
 .sources {
-    display: grid;
-    grid-template-columns: 1fr;
-    padding: 0;
-    grid-column: span 12;
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 0;
+  grid-column: span 12;
 }
 
-.sources li{
-    list-style: none;
+.sources li {
+  list-style: none;
 }
 
 .article-card {
-    display: grid;
-    grid-template-columns: 1fr;
-    height: 40vh;
-    overflow: hidden;
-    padding: 1em;
+  display: grid;
+  grid-template-columns: 1fr;
+  height: 40vh;
+  overflow: hidden;
+  padding: 1em;
 }
 
 @keyframes rotation {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
 
 @media screen and (prefers-color-scheme: light) {
-    :root {
-        --background-color: #FAFAFA;
-        --text-color: #424242;;
-        --border-color: #E0E0E0;
-        --header-background-color: #EEEEEE;
-    }
+  :root {
+    --background-color: #fafafa;
+    --text-color: #424242;
+    --border-color: #e0e0e0;
+    --header-background-color: #eeeeee;
+  }
 }
